# mytinyraytracer

./: AABB.h  BVH_Node.cpp  BVH_Node.h  CMakeLists.txt  Camera.h  Hittable.h  Hittable_list.cpp  Hittable_list.h  Light.h  Material.h  Perlin.h  README.md  Ray.h  Rect.h  Render.h  Scene.h  Sphere.cpp  Sphere.h  Texture.h  ThreadPool.h  color.h  framebuffer.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mymath.h  ray.h  utils.h  vec3.h
ext/: CMakeLists.txt
include/: AABB.h  Camera.h  OBN.h  PDF.h  Ray.h  Render.h  RenderPara.h  Screen.h  mymath.h  ticktock.h  utils.h
include/Hittable/: BVH_Node.h  Hittable.h  Hittable_list.h  Rect.h  Sphere.h  Triangle.h  Triangles.h
include/Material/: Light.h  Material.h  Micorofacet.h
include/Texture/: Perlin.h  Texture.h
rt_stb_image/: CMakeLists.txt
rt_tiny_obj_loader/: CMakeLists.txt
scenes/bunny_scene/: bunny.json
scenes/cornell_box_scene/: cornell_box.json
scenes/micorofacet_scene/: micorofacet.json
src/: BVH_Node.cpp  Hittable_list.cpp  Micorofacet.cpp  Render.cpp  RenderPara.cpp  Scene.cpp  Sphere.cpp  Triangle.cpp
